--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.1",
     "react-slideshow-image": "^4.3.1",
+    "react-super-responsive-table": "^5.2.3",
     "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.72.0",
